trial script module

--- a/index.html
+++ b/index.html
@@ -44,8 +44,20 @@
 
   <!-- Javascript for R2 Place -->
   <script src="./dist/scripts/critical-modern-script.min.js" charset="utf-8"></script>
-  <script defer src="./dist/scripts/non-critical-modern-script.min.js" charset="utf-8"></script>
+  <!-- <script defer src="./dist/scripts/non-critical-modern-script.min.js" charset="utf-8"></script> -->
   <!-- <script defer src="./dist/scripts/non-critical-legacy-script.min.js" charset="utf-8"></script> -->
+
+  <!-- <script type="module">
+    // Modern browser supporting ES6 modules
+    import { initApp } from './dist/scripts/non-critical-modern-script.js';
+    initApp();
+  </script>
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" charset="utf-8"></script> -->
+
+  <script type="module">
+    // Import the entire concatenated script file
+    import './dist/scripts/non-critical-modern-script.min.js';
+  </script>
 
 </head>
 
