revised html tag

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <!-- Javascript for R2 Place -->
   <script src="./dist/scripts/critical-modern-script.min.js" charset="utf-8"></script>
-  <script nomodule defer src="./dist/scripts/critical-legacy-script.min.js" charset="utf-8"></script>
+  <script nomodule src="./dist/scripts/critical-legacy-script.min.js" charset="utf-8"></script>
 
   <script defer src="./dist/scripts/non-critical-modern-script.min.js" charset="utf-8"></script>
   <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" charset="utf-8"></script>
