--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
   </noscript>
 
   <!-- Javascript for R2 Place -->
-  <script src="./dist/scripts/critical-modern-script.min.js" charset="utf-8"></script>
-  <script nomodule src="./dist/scripts/critical-legacy-script.min.js" charset="utf-8"></script>
-
-  <script defer src="./dist/scripts/non-critical-modern-script.min.js" charset="utf-8"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" charset="utf-8"></script>
-
+  <!-- Critical js -->
+  <script src="./dist/scripts/critical-modern-script.min.js"></script>
+  <script nomodule src="./dist/scripts/critical-legacy-script.min.js" type="text/javascript"></script>
+  <!-- Non-critical js -->
+  <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script>
 </head>
 
 <body>
