--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
   <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
 
   <!-- CSS for R2 Place -->
-  <link rel="stylesheet" href="./dist/css/style.min.css">
+  <link rel="stylesheet" href="./dist/css/critical-style.min.css">
   <noscript>
     <link rel="stylesheet" href="./src/noscript.css">
   </noscript>
+  <link rel="preload" href="./dist/css/non-critical-style.min.css" as="style">
 
   <!-- Javascript for R2 Place -->
   <!-- Critical js -->
