--- a/index.html
+++ b/index.html
@@ -84,11 +84,12 @@
       font-family: "Dancing Script", cursive;
     }
   </style>
+
   <link rel="stylesheet" href="./dist/css/critical-style.min.css">
   <noscript>
     <link rel="stylesheet" href="./src/noscript.css">
   </noscript>
-  <link rel="preload" href="./dist/css/non-critical-style.min.css" as="style">
+  <link defer rel="stylesheet" href="./dist/css/non-critical-style.min.css">
 
   <!-- Javascript for R2 Place -->
   <!-- Critical js -->
