updated critical style

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
   <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
 
   <!-- CSS for R2 Place -->
+  <!-- Critical css -->
+  <!-- Loader -->
   <style>
     .website-content--hidden {
       display: none;
@@ -89,6 +91,8 @@
   <noscript>
     <link rel="stylesheet" href="./src/noscript.css">
   </noscript>
+
+  <!-- Non-critical css -->
   <link defer rel="stylesheet" href="./dist/css/non-critical-style.min.css">
 
   <!-- Javascript for R2 Place -->
