--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
   <!-- Google fonts -->
   <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
 
-  <!-- CSS for R2 Place -->
   <!-- Critical css -->
   <!-- Loader -->
   <style>
@@ -88,24 +87,24 @@
   </style>
 
   <link rel="stylesheet" href="./dist/css/critical-style.min.css">
-  <noscript>
-    <link rel="stylesheet" href="./src/noscript.css">
-  </noscript>
 
   <!-- Critical js -->
   <script src="./dist/scripts/critical-modern-script.min.js"></script>
   <script nomodule src="./dist/scripts/critical-legacy-script.min.js" type="text/javascript"></script>
 
   <!-- Non-critical css -->
-  <!-- <link defer rel="stylesheet" href="./dist/css/non-critical-style.min.css"> -->
+  <!-- <link defer rel="stylesheet" href="./dist/css/non-critical-style.min.css"> doesn't work -->
   <link rel="preload" href="./dist/css/non-critical-style.min.css" as="style"
     onload="this.onload=null;this.rel='stylesheet'">
-
-  <!-- Javascript for R2 Place -->
 
   <!-- Non-critical js -->
   <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
   <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script>
+
+  <noscript>
+    <link rel="stylesheet" href="./src/noscript.css">
+  </noscript>
+
 </head>
 
 <body>
