--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </script>
 
   <!-- <script src="./dist/scripts/critical-modern-script.min.js"></script> -->
-  <script nomodule src="./dist/scripts/critical-legacy-script.min.js" type="text/javascript"></script>
+  <!-- <script nomodule src="./dist/scripts/critical-legacy-script.min.js" type="text/javascript"></script> -->
 
   <link rel="stylesheet" href="./dist/css/critical-style.min.css">
 
