--- a/index.html
+++ b/index.html
@@ -34,7 +34,30 @@
 
   <!-- internal source -->
   <!-- Google fonts -->
-  <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
+  <style>
+    /* Google fonts for logo */
+    /* Dancing Script */
+    @font-face {
+      font-family: 'Dancing Script';
+      font-style: normal;
+      font-weight: bold;
+      src: url('DancingScript-Bold.woff2') format('woff2'),
+        url('DancingScript-Bold.woff') format('woff');
+      font-display: swap;
+    }
+
+    /* Google font for body */
+    /* Rancho */
+    @font-face {
+      font-family: 'Rancho';
+      font-style: normal;
+      font-weight: normal;
+      src: url('./Rancho-Regular.woff2') format('woff2'),
+        url('./Rancho-Regular.woff') format('woff');
+      font-display: swap;
+    }
+  </style>
+  <!-- <link rel="stylesheet" href="./src/googlefont/google-fonts.css"> -->
 
   <!-- Critical css -->
   <!-- Loader -->
@@ -86,10 +109,10 @@
     }
   </style>
 
+  <!-- <link rel="stylesheet" href="./src/loader.css"> -->
+
   <!-- Critical js -->
   <script>
-    'use strict';
-
     window.addEventListener('load', function () {
       // hide the loader
       document.querySelector('.loader__container').style.display = 'none';
@@ -102,8 +125,6 @@
   <!-- <script nomodule src="./dist/scripts/critical-legacy-script.min.js" type="text/javascript"></script> -->
 
   <link rel="stylesheet" href="./dist/css/critical-style.min.css">
-
-
 
   <!-- Non-critical css -->
   <link rel="preload" href="./dist/css/non-critical-style.min.css" as="style"
