--- a/index.html
+++ b/index.html
@@ -34,34 +34,11 @@
 
   <!-- internal source -->
   <!-- Google fonts -->
-  <style>
-    /* Google fonts for logo */
-    /* Dancing Script */
-    @font-face {
-      font-family: 'Dancing Script';
-      font-style: normal;
-      font-weight: bold;
-      src: url('DancingScript-Bold.woff2') format('woff2'),
-        url('DancingScript-Bold.woff') format('woff');
-      font-display: swap;
-    }
-
-    /* Google font for body */
-    /* Rancho */
-    @font-face {
-      font-family: 'Rancho';
-      font-style: normal;
-      font-weight: normal;
-      src: url('./Rancho-Regular.woff2') format('woff2'),
-        url('./Rancho-Regular.woff') format('woff');
-      font-display: swap;
-    }
-  </style>
-  <!-- <link rel="stylesheet" href="./src/googlefont/google-fonts.css"> -->
+  <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
 
   <!-- Critical css -->
   <!-- Loader -->
-  <style>
+  <!-- <style>
     .website-content--hidden {
       display: none;
     }
@@ -107,21 +84,21 @@
       margin: 20px auto 0 auto;
       font-family: "Dancing Script", cursive;
     }
-  </style>
+  </style> -->
 
-  <!-- <link rel="stylesheet" href="./src/loader.css"> -->
+  <link rel="stylesheet" href="./src/loader.css">
 
   <!-- Critical js -->
-  <script>
+  <!-- <script>
     window.addEventListener('load', function () {
       // hide the loader
       document.querySelector('.loader__container').style.display = 'none';
       // show the content
       document.querySelector('.website-content').classList.remove('website-content--hidden');
     });
-  </script>
+  </script> -->
 
-  <!-- <script src="./dist/scripts/critical-modern-script.min.js"></script> -->
+  <script src="./dist/scripts/critical-modern-script.min.js"></script>
   <!-- <script nomodule src="./dist/scripts/critical-legacy-script.min.js" type="text/javascript"></script> -->
 
   <link rel="stylesheet" href="./dist/css/critical-style.min.css">
