--- a/index.html
+++ b/index.html
@@ -32,89 +32,26 @@
   <!-- Font Awesome -->
   <script defer src="https://kit.fontawesome.com/b406833c6d.js" crossorigin="anonymous"></script>
 
-  <!-- internal source -->
+  <!-- Internal source -->
   <!-- Google fonts -->
   <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
 
-  <!-- Critical css -->
-  <!-- Loader -->
-  <!-- <style>
-    .website-content--hidden {
-      display: none;
-    }
-
-    .loader__container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .loader__object {
-      border-radius: 50%;
-      border: 10px solid rgb(243, 243, 243);
-      border-top: 10px solid rgb(248, 203, 166);
-      width: 80px;
-      height: 80px;
-      -webkit-animation: spin 2s linear infinite;
-      animation: spin 2s linear infinite;
-    }
-
-    @media all and (min-width: 36em) {
-      .loader__object {
-        border: 16px solid rgb(243, 243, 243);
-        border-top: 16px solid rgb(248, 203, 166);
-        width: 120px;
-        height: 120px;
-      }
-    }
-
-    @keyframes spin {
-      0% {
-        transform: rotate(0deg);
-      }
-
-      100% {
-        transform: rotate(360deg);
-      }
-    }
-
-    .loader__container p {
-      margin: 20px auto 0 auto;
-      font-family: "Dancing Script", cursive;
-    }
-  </style> -->
-
-  <link rel="stylesheet" href="./src/loader.css">
-
-  <!-- Critical js -->
-  <!-- <script>
-    window.addEventListener('load', function () {
-      // hide the loader
-      document.querySelector('.loader__container').style.display = 'none';
-      // show the content
-      document.querySelector('.website-content').classList.remove('website-content--hidden');
-    });
-  </script> -->
-
+  <!-- Critical resources -->
+  <link rel="stylesheet" href="./dist/css/loader.min.css">
   <script src="./dist/scripts/critical-modern-script.min.js"></script>
-  <!-- <script nomodule src="./dist/scripts/critical-legacy-script.min.js" type="text/javascript"></script> -->
 
   <link rel="stylesheet" href="./dist/css/critical-style.min.css">
 
-  <!-- Non-critical css -->
+  <!-- Non-critical resources -->
   <link rel="preload" href="./dist/css/non-critical-style.min.css" as="style"
     onload="this.onload=null;this.rel='stylesheet'">
-
-  <!-- Non-critical js -->
   <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
   <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script>
 
+  <!-- No script -->
   <noscript>
     <link rel="stylesheet" href="./src/noscript.css">
   </noscript>
-
 </head>
 
 <body>
