--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
 
   <!-- external source -->
   <!-- Google font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+  <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
   <!-- Google font for logo -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap">
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap"> -->
   <!-- Google font for body -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rancho&display=swap">
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rancho&display=swap"> -->
 
   <!-- Font Awesome -->
-  <!-- <script defer src="https://kit.fontawesome.com/b406833c6d.js" crossorigin="anonymous"></script> -->
+  <script defer src="https://kit.fontawesome.com/b406833c6d.js" crossorigin="anonymous"></script>
 
   <!-- Internal source -->
   <!-- Google fonts -->
-  <!-- <link rel="stylesheet" href="./src/googlefont/google-fonts.css"> -->
+  <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
 
   <!-- Critical resources -->
   <link rel="stylesheet" href="./dist/css/loader.min.css">
@@ -54,6 +54,9 @@
   <!-- Non-critical resources -->
   <link rel="preload" href="./dist/css/non-critical-style.min.css" as="style"
     onload="this.onload=null;this.rel='stylesheet'">
+  <!-- <link rel="preload" href="./src/scss/non-critical-css/non-critical-style.css" as="style"
+    onload="this.onload=null;this.rel='stylesheet'"> -->
+
   <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
   <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script>
 
@@ -427,14 +430,33 @@
             <div class="findus__contact-content">
               <h2>Find Us</h2>
               <ul class="findus__grid">
-                <li><i class="contact__icon contact__icon--location fa-solid fa-location-dot" role="img"
-                    aria-label="Address" title="Address"></i></li>
+                <li><i class="contact__icon contact__icon--location 
+                  icon icon-solid icon-location
+                  " role="img" aria-label="Address" title="Address"></i></li>
                 <li>R2&nbsp;Place,<wbr> 2&nbsp;Relax&nbsp;Street,<wbr> R2&nbsp;1ST</li>
-                <li><i class="contact__icon fa-solid fa-phone" role="img" aria-label="Telephone" title="Telephone"></i>
+                <li><i class="contact__icon 
+                  icon icon-solid icon-phone
+                  " role="img" aria-label="Telephone" title="Telephone"></i>
                 </li>
                 <li><a href="tel:+441234567890" class="g-link">0123 456 7890</a></li>
-                <li><i class="contact__icon fas fa-envelope" role="img" aria-label="Email" title="Email"></i></li>
+                <li><i class="contact__icon 
+                  icon icon-solid icon-envelope
+                  " role="img" aria-label="Email" title="Email"></i></li>
                 <li><a href="mailto:info@r2p.com" class="g-link">info@r2p.com</a></li>
+
+                <!-- <li><i class="contact__icon contact__icon--location 
+                  fa-solid fa-location-dot
+                  " role="img" aria-label="Address" title="Address"></i></li>
+                <li>R2&nbsp;Place,<wbr> 2&nbsp;Relax&nbsp;Street,<wbr> R2&nbsp;1ST</li>
+                <li><i class="contact__icon 
+                  fa-solid fa-phone
+                  " role="img" aria-label="Telephone" title="Telephone"></i>
+                </li>
+                <li><a href="tel:+441234567890" class="g-link">0123 456 7890</a></li>
+                <li><i class="contact__icon 
+                  fas fa-envelope
+                  " role="img" aria-label="Email" title="Email"></i></li>
+                <li><a href="mailto:info@r2p.com" class="g-link">info@r2p.com</a></li> -->
               </ul>
             </div>
           </div>
@@ -478,31 +500,31 @@
     <!-- Footer -->
     <footer>
       <div class="social-icons">
-        <a href="#home"><i class="g-link fa-brands fa-meta" role="img" aria-label="Meta Icon" title="Meta"></i></a>
-        <a href="#home"><i class="g-link fa-brands fa-x-twitter" role="img" aria-label="X Twitter Icon"
-            title="X (Twitter)"></i></a>
-        <a href="#home"><i class="g-link fab fa-instagram" role="img" aria-label="Instagram Icon"
-            title="Instagram"></i></a>
+        <a href="#home"><i class="g-link 
+          icon icon-brand icon-meta
+          " role="img" aria-label="Meta Icon" title="Meta"></i></a>
+        <a href="#home"><i class="g-link 
+          icon icon-brand icon-twitter
+          " role="img" aria-label="X Twitter Icon" title="X (Twitter)"></i></a>
+        <a href="#home"><i class="g-link 
+          icon icon-brand icon-instagram
+          " role="img" aria-label="Instagram Icon" title="Instagram"></i></a>
+
+        <!-- <a href="#home"><i class="g-link 
+            fa-brands fa-meta
+            " role="img" aria-label="Meta Icon" title="Meta"></i></a>
+          <a href="#home"><i class="g-link 
+            fa-brands fa-x-twitter
+            " role="img" aria-label="X Twitter Icon" title="X (Twitter)"></i></a>
+          <a href="#home"><i class="g-link 
+            fab fa-instagram
+            " role="img" aria-label="Instagram Icon" title="Instagram"></i></a> -->
       </div>
       <p>© <span id="year"></span> R2&nbsp;Place. All&nbsp;rights&nbsp;reserved</p>
     </footer>
 
     <!-- end of hidden content -->
   </div>
-
-  <script>
-    // Dynamically load Font Awesome asynchronously
-    function loadFontAwesome() {
-      var link = document.createElement('link');
-      link.rel = 'stylesheet';
-      link.href = 'https://kit.fontawesome.com/xxx.css';
-      link.crossorigin = 'anonymous';
-      document.head.appendChild(link);
-    }
-    // Call the function to load Font Awesome after the page has loaded
-    window.addEventListener('load', loadFontAwesome);
-  </script>
-
 </body>
 
 </html>
