--- a/index.html
+++ b/index.html
@@ -30,17 +30,20 @@
   <link rel="canonical" href="https://mtw72.github.io/R2-revising/">
 
   <!-- external source -->
+  <!-- Font Awesome -->
+  <script defer src="https://kit.fontawesome.com/b406833c6d.js" crossorigin="anonymous"></script>
+
   <!-- Google font -->
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
-  <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- Google font for logo -->
-  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap"> -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap">
   <!-- Google font for body -->
-  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rancho&display=swap"> -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rancho&display=swap">
 
   <!-- Internal source -->
   <!-- Google fonts -->
-  <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
+  <!-- <link rel="stylesheet" href="./src/googlefont/google-fonts.css"> -->
 
   <!-- Critical resources -->
   <link rel="stylesheet" href="./dist/css/loader.min.css">
@@ -51,11 +54,8 @@
   <!-- Non-critical resources -->
   <link rel="preload" href="./dist/css/non-critical-style.min.css" as="style"
     onload="this.onload=null;this.rel='stylesheet'">
-  <!-- <link rel="preload" href="./src/scss/non-critical-css/non-critical-style.css" as="style"
-    onload="this.onload=null;this.rel='stylesheet'"> -->
 
-  <!-- Font Awesome -->
-  <script defer src="https://kit.fontawesome.com/b406833c6d.js" crossorigin="anonymous"></script>
+
 
   <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
   <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script>
@@ -430,7 +430,7 @@
             <div class="findus__contact-content">
               <h2>Find Us</h2>
               <ul class="findus__grid">
-                <li><i class="contact__icon contact__icon--location 
+                <!-- <li><i class="contact__icon contact__icon--location 
                   icon icon-solid icon-location
                   " role="img" aria-label="Address" title="Address"></i></li>
                 <li>R2&nbsp;Place,<wbr> 2&nbsp;Relax&nbsp;Street,<wbr> R2&nbsp;1ST</li>
@@ -442,9 +442,9 @@
                 <li><i class="contact__icon 
                   icon icon-solid icon-envelope
                   " role="img" aria-label="Email" title="Email"></i></li>
-                <li><a href="mailto:info@r2p.com" class="g-link">info@r2p.com</a></li>
+                <li><a href="mailto:info@r2p.com" class="g-link">info@r2p.com</a></li> -->
 
-                <!-- <li><i class="contact__icon contact__icon--location 
+                <li><i class="contact__icon contact__icon--location 
                   fa-solid fa-location-dot
                   " role="img" aria-label="Address" title="Address"></i></li>
                 <li>R2&nbsp;Place,<wbr> 2&nbsp;Relax&nbsp;Street,<wbr> R2&nbsp;1ST</li>
@@ -456,7 +456,7 @@
                 <li><i class="contact__icon 
                   fas fa-envelope
                   " role="img" aria-label="Email" title="Email"></i></li>
-                <li><a href="mailto:info@r2p.com" class="g-link">info@r2p.com</a></li> -->
+                <li><a href="mailto:info@r2p.com" class="g-link">info@r2p.com</a></li>
               </ul>
             </div>
           </div>
@@ -499,7 +499,7 @@
 
     <!-- Footer -->
     <footer>
-      <div class="social-icons">
+      <!-- <div class="social-icons">
         <a href="#home"><i class="g-link 
           icon icon-brand icon-meta
           " role="img" aria-label="Meta Icon" title="Meta"></i></a>
@@ -508,22 +508,22 @@
           " role="img" aria-label="X Twitter Icon" title="X (Twitter)"></i></a>
         <a href="#home"><i class="g-link 
           icon icon-brand icon-instagram
-          " role="img" aria-label="Instagram Icon" title="Instagram"></i></a>
+          " role="img" aria-label="Instagram Icon" title="Instagram"></i></a> -->
 
-        <!-- <a href="#home"><i class="g-link 
+      <a href="#home"><i class="g-link 
             fa-brands fa-meta
             " role="img" aria-label="Meta Icon" title="Meta"></i></a>
-          <a href="#home"><i class="g-link 
+      <a href="#home"><i class="g-link 
             fa-brands fa-x-twitter
             " role="img" aria-label="X Twitter Icon" title="X (Twitter)"></i></a>
-          <a href="#home"><i class="g-link 
+      <a href="#home"><i class="g-link 
             fab fa-instagram
-            " role="img" aria-label="Instagram Icon" title="Instagram"></i></a> -->
-      </div>
-      <p>© <span id="year"></span> R2&nbsp;Place. All&nbsp;rights&nbsp;reserved</p>
-    </footer>
+            " role="img" aria-label="Instagram Icon" title="Instagram"></i></a>
+  </div>
+  <p>© <span id="year"></span> R2&nbsp;Place. All&nbsp;rights&nbsp;reserved</p>
+  </footer>
 
-    <!-- end of hidden content -->
+  <!-- end of hidden content -->
   </div>
 </body>
 
