--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 
   <!-- external source -->
   <!-- Google font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
   <!-- Google font for logo -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap">
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap"> -->
   <!-- Google font for body -->
 
   <!-- Internal source -->
   <!-- Google fonts -->
-  <!-- <link rel="stylesheet" href="./src/googlefont/google-fonts.css"> -->
+  <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
 
   <!-- Critical resources -->
   <link rel="stylesheet" href="./dist/css/loader.min.css">
