--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
 
   <!-- Critical resources -->
+  <!-- loader -->
   <link rel="stylesheet" href="./dist/css/loader.min.css">
   <script src="./dist/scripts/critical-modern-script.min.js"></script>
 
@@ -42,9 +43,6 @@
   <!-- Non-critical resources -->
   <link rel="preload" href="./dist/css/non-critical-style.min.css" as="style"
     onload="this.onload=null;this.rel='stylesheet'">
-
-  <!-- Font Awesome -->
-  <!-- <script defer src="https://kit.fontawesome.com/b406833c6d.js" crossorigin="anonymous"></script> -->
 
   <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
   <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script>
@@ -419,7 +417,7 @@
             <div class="findus__contact-content">
               <h2>Find Us</h2>
               <ul class="findus__grid">
-                <!-- <li><i class="contact__icon contact__icon--location 
+                <li><i class="contact__icon contact__icon--location 
                   icon icon-solid icon-location
                   " role="img" aria-label="Address" title="Address"></i></li>
                 <li>R2&nbsp;Place,<wbr> 2&nbsp;Relax&nbsp;Street,<wbr> R2&nbsp;1ST</li>
@@ -431,9 +429,9 @@
                 <li><i class="contact__icon 
                   icon icon-solid icon-envelope
                   " role="img" aria-label="Email" title="Email"></i></li>
-                <li><a href="mailto:info@r2p.com" class="g-link">info@r2p.com</a></li> -->
+                <li><a href="mailto:info@r2p.com" class="g-link">info@r2p.com</a></li>
 
-                <li><i class="contact__icon contact__icon--location 
+                <!-- <li><i class="contact__icon contact__icon--location 
                   fa-solid fa-location-dot
                   " role="img" aria-label="Address" title="Address"></i></li>
                 <li>R2&nbsp;Place,<wbr> 2&nbsp;Relax&nbsp;Street,<wbr> R2&nbsp;1ST</li>
@@ -445,7 +443,7 @@
                 <li><i class="contact__icon 
                   fas fa-envelope
                   " role="img" aria-label="Email" title="Email"></i></li>
-                <li><a href="mailto:info@r2p.com" class="g-link">info@r2p.com</a></li>
+                <li><a href="mailto:info@r2p.com" class="g-link">info@r2p.com</a></li> -->
               </ul>
             </div>
           </div>
@@ -489,7 +487,7 @@
     <!-- Footer -->
     <footer>
       <div class="social-icons">
-        <!-- <a href="#home"><i class="g-link 
+        <a href="#home"><i class="g-link 
           icon icon-brand icon-meta
           " role="img" aria-label="Meta Icon" title="Meta"></i></a>
         <a href="#home"><i class="g-link 
@@ -497,9 +495,9 @@
           " role="img" aria-label="X Twitter Icon" title="X (Twitter)"></i></a>
         <a href="#home"><i class="g-link 
           icon icon-brand icon-instagram
-          " role="img" aria-label="Instagram Icon" title="Instagram"></i></a> -->
+          " role="img" aria-label="Instagram Icon" title="Instagram"></i></a>
 
-        <a href="#home"><i class="g-link 
+        <!-- <a href="#home"><i class="g-link 
             fa-brands fa-meta
             " role="img" aria-label="Meta Icon" title="Meta"></i></a>
         <a href="#home"><i class="g-link 
@@ -507,7 +505,7 @@
             " role="img" aria-label="X Twitter Icon" title="X (Twitter)"></i></a>
         <a href="#home"><i class="g-link 
             fab fa-instagram
-            " role="img" aria-label="Instagram Icon" title="Instagram"></i></a>
+            " role="img" aria-label="Instagram Icon" title="Instagram"></i></a> -->
       </div>
       <p>© <span id="year"></span> R2&nbsp;Place. All&nbsp;rights&nbsp;reserved</p>
     </footer>
