--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 
   <!-- Critical resources -->
   <!-- loader -->
-  <link rel="stylesheet" href="./dist/css/loader.min.css">
-  <script src="./dist/scripts/critical-modern-script.min.js"></script>
+  <link rel="stylesheet" href="./dist/css/loader.min.css?cb=123">
+  <script src="./dist/scripts/critical-modern-script.min.js?cb=123"></script>
 
-  <link rel="stylesheet" href="./dist/css/critical-style.min.css">
+  <link rel="stylesheet" href="./dist/css/critical-style.min.css?cb=123">
 
   <!-- Non-critical resources -->
-  <link rel="preload" href="./dist/css/non-critical-style.min.css" as="style"
+  <link rel="preload" href="./dist/css/non-critical-style.min.css?cb=123" as="style"
     onload="this.onload=null;this.rel='stylesheet'">
 
-  <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script>
+  <script defer src="./dist/scripts/non-critical-modern-script.min.js?cb=123"></script>
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js?cb=123" type="text/javascript"></script>
 
   <!-- No script -->
   <noscript>
@@ -417,18 +417,15 @@
             <div class="findus__contact-content">
               <h2>Find Us</h2>
               <ul class="findus__grid">
-                <li><i class="contact__icon contact__icon--location 
-                  icon icon-solid icon-location
-                  " role="img" aria-label="Address" title="Address"></i></li>
+                <li><i class="contact__icon contact__icon--location icon icon-solid icon-location" role="img"
+                    aria-label="Address" title="Address"></i></li>
                 <li>R2&nbsp;Place,<wbr> 2&nbsp;Relax&nbsp;Street,<wbr> R2&nbsp;1ST</li>
-                <li><i class="contact__icon 
-                  icon icon-solid icon-phone
-                  " role="img" aria-label="Telephone" title="Telephone"></i>
+                <li><i class="contact__icon icon icon-solid icon-phone" role="img" aria-label="Telephone"
+                    title="Telephone"></i>
                 </li>
                 <li><a href="tel:+441234567890" class="g-link">0123 456 7890</a></li>
-                <li><i class="contact__icon 
-                  icon icon-solid icon-envelope
-                  " role="img" aria-label="Email" title="Email"></i></li>
+                <li><i class="contact__icon icon icon-solid icon-envelope" role="img" aria-label="Email"
+                    title="Email"></i></li>
                 <li><a href="mailto:info@r2p.com" class="g-link">info@r2p.com</a></li>
               </ul>
             </div>
@@ -473,15 +470,12 @@
     <!-- Footer -->
     <footer>
       <div class="social-icons">
-        <a href="#home"><i class="g-link 
-          icon icon-brand icon-meta
-          " role="img" aria-label="Meta Icon" title="Meta"></i></a>
-        <a href="#home"><i class="g-link 
-          icon icon-brand icon-twitter
-          " role="img" aria-label="X Twitter Icon" title="X (Twitter)"></i></a>
-        <a href="#home"><i class="g-link 
-          icon icon-brand icon-instagram
-          " role="img" aria-label="Instagram Icon" title="Instagram"></i></a>
+        <a href="#home"><i class="g-link icon icon-brand icon-meta" role="img" aria-label="Meta Icon"
+            title="Meta"></i></a>
+        <a href="#home"><i class="g-link icon icon-brand icon-twitter" role="img" aria-label="X Twitter Icon"
+            title="X (Twitter)"></i></a>
+        <a href="#home"><i class="g-link icon icon-brand icon-instagram" role="img" aria-label="Instagram Icon"
+            title="Instagram"></i></a>
       </div>
       <p>© <span id="year"></span> R2&nbsp;Place. All&nbsp;rights&nbsp;reserved</p>
     </footer>
