browsersync of ncscss successful

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en-gb" dir="ltr">
 
 <head>
+  <title>R2 Place</title>
+
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,15 +27,12 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
-  <title>R2 Place</title>
   <link rel="icon" type="image/x-icon" href="./dist/images/R2.png">
   <link rel="canonical" href="https://mtw72.github.io/R2-revising/">
 
-  <!-- Internal source -->
-  <!-- Google fonts -->
-  <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
-
   <!-- Critical resources -->
+  <!-- google fonts -->
+  <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
   <!-- loader -->
   <link rel="stylesheet" href="./dist/css/loader.min.css">
   <script src="./dist/scripts/critical-modern-script.min.js"></script>
