--- a/index.html
+++ b/index.html
@@ -32,20 +32,19 @@
 
   <!-- Critical resources -->
   <!-- google fonts -->
-  <!-- <link rel="stylesheet" href="./dist/css/googlefont.css"> -->
-  <link rel="stylesheet" href="./dist/css/googlefont.min.css">
+  <link rel="stylesheet" href="./dist/css/googlefont.css">
   <!-- loader -->
-  <link rel="stylesheet" href="./dist/css/loader.min.css">
-  <script src="./dist/scripts/critical-modern-script.min.js"></script>
+  <link rel="stylesheet" href="./dist/css/loader.css">
+  <script src="./dist/scripts/critical-modern-script.js"></script>
 
-  <link rel="stylesheet" href="./dist/css/critical-style.min.css">
+  <link rel="stylesheet" href="./dist/css/critical-style.css">
 
   <!-- Non-critical resources -->
-  <link rel="preload" href="./dist/css/non-critical-style.min.css" as="style"
+  <link rel="preload" href="./dist/css/non-critical-style.css" as="style"
     onload="this.onload=null;this.rel='stylesheet'">
 
-  <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script>
+  <script defer src="./dist/scripts/non-critical-modern-script.js"></script>
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js" type="text/javascript"></script>
 
   <!-- No script -->
   <noscript>
