--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 
   <!-- Critical resources -->
   <!-- google fonts -->
-  <link rel="stylesheet" href="./dist/css/googlefont.css">
+  <link rel="stylesheet" href="./dist/styles/googlefont.css">
   <!-- loader -->
-  <link rel="stylesheet" href="./dist/css/loader.css">
+  <link rel="stylesheet" href="./dist/styles/loader.css">
   <script src="./dist/scripts/critical-modern-script.js"></script>
 
-  <link rel="stylesheet" href="./dist/css/critical-style.css">
+  <link rel="stylesheet" href="./dist/styles/critical-style.css">
 
   <!-- Non-critical resources -->
-  <link rel="preload" href="./dist/css/non-critical-style.css" as="style"
+  <link rel="preload" href="./dist/styles/non-critical-style.css" as="style"
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.js"></script>
@@ -48,8 +48,7 @@
 
   <!-- No script -->
   <noscript>
-    <!-- <link rel="stylesheet" href="./dist/css/noscript.css"> -->
-    <link rel="stylesheet" href="./dist/css/noscript.min.css">
+    <link rel="stylesheet" href="./dist/styles/noscript.css">
   </noscript>
 </head>
 
