--- a/index.html
+++ b/index.html
@@ -51,26 +51,34 @@
     <link rel="stylesheet" href="./dist/styles/noscript.css">
   </noscript> -->
 
-  <!-- Critical resources -->
-  <!-- google fonts -->
-  <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
-  <!-- loader -->
+
+  <link rel="stylesheet" href="./dist/styles/googlefont.css">
+  <link rel="stylesheet" href="./dist/styles/loader.css">
+  <script src="./dist/scripts/critical-modern-script.js"></script>
+
+  <link rel="stylesheet" href="./dist/styles/critical-style.css">
+
+  <link rel="preload" href="./dist/styles/non-critical-style.css" as="style"
+    onload="this.onload=null;this.rel='stylesheet'">
+
+  <script defer src="./dist/scripts/non-critical-modern-script.js"></script>
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js" type="text/javascript"></script>
+
+
+
+
+
+  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
   <link rel="stylesheet" href="./dist/styles/loader.min.css">
   <script src="./dist/scripts/critical-modern-script.min.js"></script>
 
   <link rel="stylesheet" href="./dist/styles/critical-style.min.css">
 
-  <!-- Non-critical resources -->
   <link rel="preload" href="./dist/styles/non-critical-style.min.css" as="style"
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script>
-
-  <!-- No script -->
-  <noscript>
-    <link rel="stylesheet" href="./dist/styles/noscript.min.css">
-  </noscript>
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script> -->
 
 </head>
 
