amended accordion border color through .js

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <link rel="stylesheet" href="./dist/styles/noscript.css">
   </noscript> -->
 
-
-  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.css">
+  <!-- 
+  <link rel="stylesheet" href="./dist/styles/googlefont.css">
   <link rel="stylesheet" href="./dist/styles/loader.css">
   <script src="./dist/scripts/critical-modern-script.js"></script>
 
