--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <link rel="stylesheet" href="./dist/styles/noscript.css">
   </noscript> -->
 
-  <!-- 
+
   <link rel="stylesheet" href="./dist/styles/googlefont.css">
   <link rel="stylesheet" href="./dist/styles/loader.css">
   <script src="./dist/scripts/critical-modern-script.js"></script>
@@ -62,13 +62,13 @@
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js" type="text/javascript"></script> -->
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js" type="text/javascript"></script>
 
 
 
 
 
-  <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
+  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
   <link rel="stylesheet" href="./dist/styles/loader.min.css">
   <script src="./dist/scripts/critical-modern-script.min.js"></script>
 
@@ -78,7 +78,7 @@
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script>
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script> -->
 
 </head>
 
