aria-hidden to navlink

--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@
           <div class="navbar__collapse" id="collapsibleNavbar" role="menu" aria-labelledby="menu-toggler">
             <ul class="navbar__nav" role="none">
               <li class="navbar__nav-item" role="none">
-                <a class="navbar__nav-link" href="#menu" role="menuitem">Menu</a>
+                <a class="navbar__nav-link" href="#menu" role="menuitem" aria-hidden="true">Menu</a>
               </li>
               <li class="navbar__nav-item" role="none">
-                <a class="navbar__nav-link" href="#reservation" role="menuitem">Reservation</a>
+                <a class="navbar__nav-link" href="#reservation" role="menuitem" aria-hidden="true">Reservation</a>
               </li>
               <li class="navbar__nav-item" role="none">
-                <a class="navbar__nav-link" href="#findus" role="menuitem" id="findus-link">Find Us</a>
+                <a class="navbar__nav-link" href="#findus" role="menuitem" id="findus-link" aria-hidden="true">Find
+                  Us</a>
               </li>
             </ul>
           </div>
