add 'use strict'; to two .js files, added tabindex="-1" to html instead of aria-hidden in js

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </noscript> -->
 
 
-  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.css">
+  <link rel="stylesheet" href="./dist/styles/googlefont.css">
   <link rel="stylesheet" href="./dist/styles/loader.css">
   <script src="./dist/scripts/critical-modern-script.js"></script>
 
@@ -62,13 +62,13 @@
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js" type="text/javascript"></script> -->
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js" type="text/javascript"></script>
 
 
 
 
 
-  <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
+  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
   <link rel="stylesheet" href="./dist/styles/loader.min.css">
   <script src="./dist/scripts/critical-modern-script.min.js"></script>
 
@@ -78,7 +78,7 @@
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script>
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script> -->
 
 </head>
 
@@ -112,13 +112,13 @@
           <div class="navbar__collapse" id="collapsibleNavbar" role="menu" aria-labelledby="menu-toggler">
             <ul class="navbar__nav" role="none">
               <li class="navbar__nav-item" role="none">
-                <a class="navbar__nav-link" href="#menu" role="menuitem">Menu</a>
+                <a class="navbar__nav-link" href="#menu" role="menuitem" tabindex="-1">Menu</a>
               </li>
               <li class="navbar__nav-item" role="none">
-                <a class="navbar__nav-link" href="#reservation" role="menuitem">Reservation</a>
+                <a class="navbar__nav-link" href="#reservation" role="menuitem" tabindex="-1">Reservation</a>
               </li>
               <li class="navbar__nav-item" role="none">
-                <a class="navbar__nav-link" href="#findus" role="menuitem" id="findus-link">Find
+                <a class="navbar__nav-link" href="#findus" role="menuitem" tabindex="-1" id="findus-link">Find
                   Us</a>
               </li>
             </ul>
