revised carousel dot to use button instead of span

--- a/index.html
+++ b/index.html
@@ -315,22 +315,13 @@
 
           <!-- The dots/circles -->
           <div class="small-menu__slideshow-dots" role="tablist" aria-label="Slides">
-            <span class="small-menu__slideshow-dot" onclick="currentSlide(1)" type="button" role="tab"
-              aria-label="Slide 1" aria-controls="slide1"></span>
-            <span class="small-menu__slideshow-dot" onclick="currentSlide(2)" type="button" role="tab"
-              aria-label="Slide 2" aria-controls="slide2"></span>
-            <span class="small-menu__slideshow-dot" onclick="currentSlide(3)" type="button" role="tab"
-              aria-label="Slide 3" aria-controls="slide3"></span>
+            <button class="small-menu__slideshow-dot" onclick="currentSlide(1)" type="button" role="tab" tabindex="0"
+              aria-label="Slide 1" aria-controls="slide1" style="padding-inline: 1px;"></button>
+            <button class="small-menu__slideshow-dot" onclick="currentSlide(2)" type="button" role="tab" tabindex="0"
+              aria-label="Slide 2" aria-controls="slide2" style="padding-inline: 1px;"></button>
+            <button class="small-menu__slideshow-dot" onclick="currentSlide(3)" type="button" role="tab" tabindex="0"
+              aria-label="Slide 3" aria-controls="slide3" style="padding-inline: 1px;"></button>
           </div>
-
-          <!-- <div class="small-menu__slideshow-dots" role="tablist" aria-label="Slides">
-            <button class="small-menu__slideshow-dot" onclick="currentSlide(1)" type="button" role="tab"
-              aria-label="Slide 1" aria-controls="slide1"></button>
-            <button class="small-menu__slideshow-dot" onclick="currentSlide(2)" type="button" role="tab"
-              aria-label="Slide 2" aria-controls="slide2"></button>
-            <button class="small-menu__slideshow-dot" onclick="currentSlide(3)" type="button" role="tab"
-              aria-label="Slide 3" aria-controls="slide3"></button>
-          </div> -->
 
         </div>
       </section>
