--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </noscript> -->
 
 
-  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.css">
+  <link rel="stylesheet" href="./dist/styles/googlefont.css">
   <link rel="stylesheet" href="./dist/styles/loader.css">
   <script src="./dist/scripts/critical-modern-script.js"></script>
 
@@ -62,13 +62,13 @@
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js" type="text/javascript"></script> -->
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js" type="text/javascript"></script>
 
 
 
 
 
-  <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
+  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
   <link rel="stylesheet" href="./dist/styles/loader.min.css">
   <script src="./dist/scripts/critical-modern-script.min.js"></script>
 
@@ -78,7 +78,7 @@
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script>
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script> -->
 
 </head>
 
@@ -316,11 +316,11 @@
 
           <!-- The dots/circles -->
           <div class="small-menu__carousel-dots" role="tablist" aria-label="Slides">
-            <button class="small-menu__carousel-dot" onclick="currentSlide(1)" type="button" role="tab" tabindex="0"
+            <button class="small-menu__carousel-dot" onclick="currentSlide(1)" type="button" role="tab"
               aria-label="Slide 1" aria-controls="slide1"></button>
-            <button class="small-menu__carousel-dot" onclick="currentSlide(2)" type="button" role="tab" tabindex="0"
+            <button class="small-menu__carousel-dot" onclick="currentSlide(2)" type="button" role="tab"
               aria-label="Slide 2" aria-controls="slide2"></button>
-            <button class="small-menu__carousel-dot" onclick="currentSlide(3)" type="button" role="tab" tabindex="0"
+            <button class="small-menu__carousel-dot" onclick="currentSlide(3)" type="button" role="tab"
               aria-label="Slide 3" aria-controls="slide3"></button>
           </div>
 
