amended the padding-block of sections

--- a/index.html
+++ b/index.html
@@ -415,16 +415,13 @@
                   title="Please provide any additional information or special requests">(e.g. Dietary Restriction, Special Occasions)</textarea>
               </div>
 
-              <div class="reservation__form--bottom-part">
-
-                <div class="clearfix">
-                  <button id="formSumbitButton" type="submit" class="reservation__form--button">Submit</button>
-                </div>
+              <div class="reservation__form--bottom-part clearfix">
+                <button id="formSumbitButton" type="submit" class="reservation__form--button">Submit</button>
               </div>
             </div>
           </form>
 
-          <!-- confirmation or error message -->
+          <!-- confirmation message -->
           <div class="reservation__message-container" id="reservation-message">
             <div class="reservation__message-content">
               <h2>Booking Summary<span class="reservation__message__close-button">&times;</span></h2>
