revised pop up message css

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
           <!-- confirmation message -->
           <div class="reservation__message-container" id="reservation-message">
             <div class="reservation__message-content">
-              <h2>Booking Summary<span class="reservation__message__close-button">&times;</span></h2>
+              <h2>Booking Summary<span class="reservation__message__close-button" tabindex="0">&times;</span></h2>
               <p>Please confirm the following details:</p>
               <ul class="reservation__message-list">
                 <li>Name:</li>
