one single h1 and try to make the p unlike heading with font-weight: 400

--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 
       <!-- Menu Container -->
       <section id="menu">
-        <h1>MENU</h1>
+        <h2>MENU</h2>
         <div class="small-menu">
           <button type="button" class="small-menu__accordion small-menu__accordion--active" aria-controls="pasta-panel"
             id="pasta-button">
-            <h2>PASTA</h2>
+            <h3>PASTA</h3>
           </button>
           <div class="small-menu__panel" id="pasta-panel" aria-labelledby="pasta-button">
             <div class="small-menu__content">
@@ -167,7 +167,7 @@
 
           <button type="button" class="small-menu__accordion small-menu__accordion--active" aria-controls="rice-panel"
             id="rice-button">
-            <h2>RICE</h2>
+            <h3>RICE</h3>
           </button>
           <div class="small-menu__panel" id="rice-panel" aria-labelledby="rice-button">
             <div class="small-menu__content">
@@ -182,7 +182,7 @@
 
           <button type="button" class="small-menu__accordion small-menu__accordion--active" aria-controls="sides-panel"
             id="sides-button">
-            <h2>SIDES</h2>
+            <h3>SIDES</h3>
           </button>
           <div class="small-menu__panel" id="sides-panel" aria-labelledby="sides-button">
             <div class="small-menu__content">
@@ -200,29 +200,29 @@
           <div class="large-menu__tabs" role="tablist" aria-label="Menu-tabs">
             <button onclick="openMenu(event, 'pasta-menu');" class="large-menu__tab large-menu__tab--active" role="tab"
               aria-controls="pasta-menu" id="pasta-tab">
-              <h2>PASTA</h2>
+              <h3>PASTA</h3>
             </button>
             <button onclick="openMenu(event, 'rice-menu');" class="large-menu__tab" role="tab" aria-controls="rice-menu"
               id="rice-tab">
-              <h2>RICE</h2>
+              <h3>RICE</h3>
             </button>
             <button onclick="openMenu(event, 'sides-menu');" class="large-menu__tab" role="tab"
               aria-controls="sides-menu" id="sides-tab">
-              <h2>SIDES</h2>
+              <h3>SIDES</h3>
             </button>
           </div>
 
           <div class="large-food-menu" role="tabpanel" id="pasta-menu" aria-labelledby="pasta-tab">
             <div class="large-menu__item large-menu__item--1">
-              <h3>Salmon Spaghetti<span class="large-menu__item-price">£12.50</span></h3>
+              <h4>Salmon Spaghetti<span class="large-menu__item-price">£12.50</span></h4>
               <p>Salmon Spaghetti with Mushroom Sauce</p>
             </div>
             <div class="large-menu__item large-menu__item--2">
-              <h3>Baked Seafood Fettuccine<span class="large-menu__item-price">£14.50</span></h3>
+              <h4>Baked Seafood Fettuccine<span class="large-menu__item-price">£14.50</span></h4>
               <p>Prawn and Squid with Fettuccine with White Sauce</p>
             </div>
             <div class="large-menu__item large-menu__item--3">
-              <h3>Mac and Cheese with Ham<span class="large-menu__item-price">£10.50</span></h3>
+              <h4>Mac and Cheese with Ham<span class="large-menu__item-price">£10.50</span></h4>
               <p>Macaroni and Cheese with Parma Ham</p>
             </div>
             <div class="large-menu__image">
@@ -235,15 +235,15 @@
 
           <div class="large-food-menu" role="tabpanel" id="rice-menu" aria-labelledby="rice-tab">
             <div class="large-menu__item large-menu__item--1">
-              <h3>Thai Pineapple Fried Rice<span class="large-menu__item-price">£16.50</span></h3>
+              <h4>Thai Pineapple Fried Rice<span class="large-menu__item-price">£16.50</span></h4>
               <p>Thai-style Fried Rice with Seafood and Pineapple</p>
             </div>
             <div class="large-menu__item large-menu__item--2">
-              <h3>Salmon and Prawn Risotto<span class="large-menu__item-price">£14.50</span></h3>
+              <h4>Salmon and Prawn Risotto<span class="large-menu__item-price">£14.50</span></h4>
               <p>Salmon and Prawn Risotto in Mushroom Sauce</p>
             </div>
             <div class="large-menu__item large-menu__item--3">
-              <h3>Mackerel with Black Rice<span class="large-menu__item-price">£12.50</span></h3>
+              <h4>Mackerel with Black Rice<span class="large-menu__item-price">£12.50</span></h4>
               <p>Grilled Mackerel with Tofu and Black Rice</p>
             </div>
             <div class="large-menu__image">
@@ -256,15 +256,15 @@
 
           <div class="large-food-menu" role="tabpanel" id="sides-menu" aria-labelledby="sides-tab">
             <div class="large-menu__item large-menu__item--1">
-              <h3>Satay Chicken Skewers<span class="large-menu__item-price">£8.00</span></h3>
+              <h4>Satay Chicken Skewers<span class="large-menu__item-price">£8.00</span></h4>
               <p>Grilled Chicken Skewers with Satay Sauce</p>
             </div>
             <div class="large-menu__item large-menu__item--2">
-              <h3>Salmon Avocado Rolls<span class="large-menu__item-price">£9.50</span></h3>
+              <h4>Salmon Avocado Rolls<span class="large-menu__item-price">£9.50</span></h4>
               <p>Salmon, Egg and Avocado in Rice Paper Rolls</p>
             </div>
             <div class="large-menu__item large-menu__item--3">
-              <h3>Petits Pains Curry Prawn<span class="large-menu__item-price">£8.50</span></h3>
+              <h4>Petits Pains Curry Prawn<span class="large-menu__item-price">£8.50</span></h4>
               <p>Curry Prawn in Petits Pains</p>
             </div>
             <div class="large-menu__image">
@@ -330,7 +330,7 @@
 
       <!-- Reservation -->
       <section id="reservation">
-        <h1>RESERVATION</h1>
+        <h2>RESERVATION</h2>
         <div class="reservation">
           <!-- reservation photo -->
           <div class="reservation__photo">
@@ -458,13 +458,13 @@
       <section class="findus" id="findus">
         <div class="findus-container">
           <div class="findus__logofont-container">
-            <h1 class="g-logofont">R2 Place</h1>
+            <h2 class="g-logofont">R2 Place</h2>
           </div>
 
           <!-- contact information-->
           <div class="findus__contact-container">
             <div class="findus__contact-content">
-              <h2>Find Us</h2>
+              <h3>Find Us</h3>
               <ul class="findus__grid">
                 <li><i class="contact__icon contact__icon--location icon icon-solid icon-location" role="img"
                     aria-label="Address" title="Address"></i></li>
@@ -483,7 +483,7 @@
           <!-- opening hours -->
           <div class="findus__openhour-container">
             <div class="findus__openhour-content">
-              <h2>Opening Hours</h2>
+              <h3>Opening Hours</h3>
               <ul class="openhour-grid--small">
                 <li>Sunday</li>
                 <li>12:00 - 17:00</li>
@@ -519,12 +519,15 @@
     <!-- Footer -->
     <footer>
       <div class="social-icons">
-        <a href="#home"><i class="g-link icon icon-brand icon-meta" role="img" aria-label="Meta Icon"
-            title="Meta"></i></a>
-        <a href="#home"><i class="g-link icon icon-brand icon-twitter" role="img" aria-label="X Twitter Icon"
-            title="X (Twitter)"></i></a>
-        <a href="#home"><i class="g-link icon icon-brand icon-instagram" role="img" aria-label="Instagram Icon"
-            title="Instagram"></i></a>
+        <a href="https://en-gb.facebook.com/" target="_blank" type="text/html" hreflang="en">
+          <i class="g-link icon icon-brand icon-meta" role="img" aria-label="Meta Icon" title="Meta"></i>
+        </a>
+        <a href="https://twitter.com/?lang=en" target="_blank" type="text/html" hreflang="en">
+          <i class="g-link icon icon-brand icon-twitter" role="img" aria-label="X Twitter Icon" title="X (Twitter)"></i>
+        </a>
+        <a href="https://www.instagram.com/" target="_blank" type="text/html" hreflang="en">
+          <i class="g-link icon icon-brand icon-instagram" role="img" aria-label="Instagram Icon" title="Instagram"></i>
+        </a>
       </div>
       <p>© <span id="year"></span> R2&nbsp;Place. All&nbsp;rights&nbsp;reserved</p>
     </footer>
