find us: make logofonr aria-hidden, revise h3 to h2

--- a/index.html
+++ b/index.html
@@ -458,13 +458,13 @@
       <section class="findus" id="findus">
         <div class="findus-container">
           <div class="findus__logofont-container">
-            <h2 class="g-logofont">R2 Place</h2>
+            <h2 class="g-logofont" aria-hidden="true">R2 Place</h2>
           </div>
 
           <!-- contact information-->
           <div class="findus__contact-container">
             <div class="findus__contact-content">
-              <h3>Find Us</h3>
+              <h2>Find Us</h2>
               <ul class="findus__grid">
                 <li><i class="contact__icon contact__icon--location icon icon-solid icon-location" role="img"
                     aria-label="Address" title="Address"></i></li>
@@ -483,7 +483,7 @@
           <!-- opening hours -->
           <div class="findus__openhour-container">
             <div class="findus__openhour-content">
-              <h3>Opening Hours</h3>
+              <h2>Opening Hours</h2>
               <ul class="openhour-grid--small">
                 <li>Sunday</li>
                 <li>12:00 - 17:00</li>
